# rust-cktap

./: .gitignore  CLAUDE.md  CONVENTIONS.md  PURE_RUST_PROPOSAL.md  PURE_RUST_PROPOSAL_CLEAN.md  README.md  clippy.toml  flake.nix
.github/workflows/: test.yml
cktap-ffi/: Cargo.toml
cktap-ffi/src/: lib.rs
cli/: Cargo.toml
cli/src/: main.rs  output.rs
lib/: Cargo.toml
lib/examples/: usb_test.rs
lib/src/: apdu.rs  ccid.rs  commands.rs  discovery.rs  emulator.rs  factory_root_key.rs  lib.rs  sats_card.rs  tap_signer.rs  usb_transport.rs
