[package]
name = "cktap-direct-ffi"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
name = "cktap_direct_ffi"
# Only staticlib is supported for musl target (our default)
# For cdylib support, build with: cargo build --target x86_64-unknown-linux-gnu
crate-type = ["staticlib"]

[dependencies]
cktap-direct = { path = "../lib" }
uniffi = { version = "0.29", features = ["cli"] }
thiserror = "1.0"

[features]
default = []