[package]
name = "cktap-direct-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cktap-direct"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cktap-direct = { path = "../lib" }
clap = { version = "4.3.1", features = ["derive"] }
rpassword = { version = "7.2" }
tokio = { version = "1", features = ["full"] }
env_logger = "0.10"
bitcoin = "0.32"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

[features]
emulator = ["cktap-direct/emulator"]
