[package]
name = "cktap-direct"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["lib"]
name = "cktap_direct"


[dependencies]
ciborium = "0.2.0"
serde = "1"
serde_bytes = "0.11"

# async
tokio = { version = "1.44", features = ["macros", "rt-multi-thread"] }

# error handling
thiserror = "2.0"

# bitcoin
bitcoin = { version = "0.32", features = ["rand-std"] }

# logging
log = "0.4"

# USB communication
rusb = "0.9"

[features]
default = []
emulator = []

[dev-dependencies]
env_logger = "0.10"

[[example]]
name = "usb_test"
